--- a/templates/register.html
+++ b/templates/register.html
@@ -18,7 +18,7 @@
     <main class="main">
         <div class="window">
             <h1 class="title">Регистрация</h1>
-            <form class="form" action="/login" method="POST">
+            <form class="form" action="/register" method="POST">
                 <div class="inputs">
                     <div class="important">
                         <input type="text" name="firstName" class="text-input" placeholder="Имя">
