--- a/templates/register.html
+++ b/templates/register.html
@@ -6,12 +6,11 @@
     <link rel="shortcut icon" href="assets/star.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/register.css">
-
-    <script src="js/register.js" defer></script>
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/fonts.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/register.css">
+    <script src="/js/register.js" defer></script>
 </head>
 
 <body>
