--- a/static/css/register.css
+++ b/static/css/register.css
@@ -36,19 +36,25 @@
     line-height: 0.7;
 }
 
-.login {
+.links {
+    padding-top: 20px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+}
+
+.link {
     color: var(--primary);
     text-decoration: underline;
 }
 
 .button {
-    margin-left: 10px;
     align-self: flex-end;
     color: #fff;
     background-color: var(--primary);
     padding: 10px;
     border-radius: 5px;
-    margin-top: 20px;
 }
 
 .button:disabled {
