--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="assets/star.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/star.ico') }}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вход</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fonts.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 </head>
+
 <body>
     <main class="main">
         <div class="window">
@@ -19,9 +21,14 @@
                     <input type="text" name="email" class="text-input" placeholder="Логин">
                     <input type="text" name="password" class="text-input" placeholder="Пароль">
                 </div>
-                <a href="/register" class="register">Зарегистрироваться</a><button type="submit" class="button">Войти</button>
+                <div class="links">
+                    <a href="/" class="link">Главная</a>
+                    <a href="/register" class="link">Зарегистрироваться</a>
+                    <button type="submit" class="button">Войти</button>
+                </div>
             </form>
         </div>
     </main>
 </body>
+
 </html>
