--- a/templates/register.html
+++ b/templates/register.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="assets/star.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/star.ico') }}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/register.css">
-    <script src="/js/register.js" defer></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fonts.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}">
+    <script src="{{ url_for('static', filename='js/register.js') }}" defer></script>
 </head>
 
 <body>
@@ -56,7 +56,11 @@
                     </div>
                     <span class="mark">* - поле обязательно для заполнения</span>
                 </div>
-                <a href="/login" class="login">Войти</a><button type="submit" class="button" disabled>Зарегистрироваться</button>
+                <div class="links">
+                    <a href="/" class="link">Главная</a>
+                    <a href="/login" class="link">Войти</a>
+                    <button type="submit" class="button" disabled>Зарегистрироваться</button>
+                </div>
             </form>
         </div>
     </main>
