--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,8 @@
 <body>
     <div class="container wrapper">
         <header class="header">
-            <nav>
-                <a href="/" class="link">Главная</a>
-            </nav>
+            <span class="links-text">Покажите себя этому миру!</span>
             <div class="links">
-                <span class="links-text">Вы одарены?</span>
                 <a href="/login" class="link">Войти</a>
                 <a href="/register" class="link">Зарегистрироваться</a>
             </div>
