--- a/static/css/child.css
+++ b/static/css/child.css
@@ -44,7 +44,7 @@ header>.container {
     border-radius: 12px;
 }
 
-.h2 {
+.h6 {
     font-weight: bold;
     font-size: 1.1rem;
 }
@@ -80,5 +80,109 @@ header>.container {
 
 .main {
     background-color: var(--primary);
-    height: calc(100% - 200px);
+    min-height: calc(100% - 200px);
+}
+
+.main>.container {
+    padding-top: 10px;
+    height: 100%;
+}
+
+.wrapper {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px
+}
+
+.h2 {
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+table {
+    table-layout: fixed;
+    width: 100%;
+    border-spacing: 0;
+}
+
+th {
+    font-weight: bold;
+}
+
+td, th {
+    text-align: center;
+    padding: 8px;
+    border: 2px solid var(--primary);
+}
+
+th {
+    border-top: 0;
+}
+
+th:first-child {
+    border-left: 0;
+}
+
+th:last-child {
+    border-right: 0;
+}
+
+tbody tr:last-child>* {
+    border-bottom: 0;
+}
+
+td:nth-child(4n + 1) {
+    border-left: 0;
+}
+
+td:nth-child(4n + 4) {
+    border-right: 0;
+}
+
+.new-achievement-button {
+    color: #fff;
+    font-weight: bold;
+    width: 100%;
+    padding: 12px;
+    border: 6px dashed white;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+
+.dialog {
+    top: 10vh;
+    height: max-content;
+    padding: 15px;
+}
+
+.dialog::backdrop {
+    background: rgb(190 190 190 / 50%);
+}
+
+.form {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px
+}
+
+.text-input {
+    width: 100%;
+}
+
+.selects {
+    display: flex;
+    gap: 15px
+}
+
+.button {
+    align-self: flex-end;
+}
+
+.button:disabled {
+    opacity: 75%;
 }
