финальная правка child.html

--- a/templates/child.html
+++ b/templates/child.html
@@ -42,7 +42,7 @@
     <main class="main">
         <dialog class="dialog" id="form-window" popover>
             <h2 class="h2">Опишите ваше достижение</h2>
-            <form action="/achievement" method="POST" class="form">
+            <form action="/achievement?id={{ id }}" method="POST" class="form">
                 <div>
                     <input type="text" name="title" class="text-input" id="title" placeholder="Название работы">
                 </div>
