--- a/templates/child.html
+++ b/templates/child.html
@@ -69,7 +69,7 @@
 
         <div class="container">
             <div class="wrapper">
-                {% if len(achievements) %}
+                {% if achievements %}
                 <h2 class="h2">Мое портфолио</h2>
                 <table>
                     <thead>
