--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,10 @@
+body {
+    background: url(/static/assets/main.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
 .wrapper {
     height: 100%;
     display: grid;
@@ -42,10 +49,21 @@
     background-color: #2b3683;
 }
 
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
 .text {
     text-align: center;
-    padding: 150px 0;
     font-size: 1.25rem;
+    color: #fff;
+    backdrop-filter: blur(10px);
+    padding: 24px;
+    border-radius: 12px;
 }
 
 .search-button {
@@ -56,7 +74,7 @@
     border: 3px solid pink;
 }
 
-.footer {  
+.footer {
     padding: 28px 40px;
     text-align: right;
     background-color: rgb(205, 205, 205);
