до опупения важные дизайнерские правки

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,18 +35,18 @@
         </main>
 
         <footer class="footer">
+            <div>
+                <h6 class="h6">Авторы:</h6>
+                <ul class="autors-list">
+                    <li>Джум Владислав Вадимович&nbsp;</li>
+                    <li>&nbsp;Черевко Александр Романович</li>
+                    <li>Кочкожаров Александр&nbsp;</li>
+                    <li>&nbsp;Устич Давид Викторович</li>
+                </ul>
+            </div>
             <p>
                 Проект создан не в коммерческих целях.
-                <br>
-                <br>
-                Авторы:
             </p>
-            <ul>
-                <li>Джум Владислав Вадимович</li>
-                <li>Черевко Александр Романович</li>
-                <li>Кочкожаров Александр</li>
-                <li>Устич Давид Викторович</li>
-            </ul>
         </footer>
     </div>
 </body>
