--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,29 +19,44 @@ body {
 
 .header {
     background: var(--primary);
-    padding: 28px 40px;
+    padding: 26px 26px 26px 56px;
     display: grid;
     grid-template: 1fr / 1fr auto;
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0 24px 24px;
 }
 
 .links {
     display: flex;
-    gap: 12px;
+    gap: 8px;
 }
 
 .links-text {
     color: #fff;
     font-size: 1.2rem;
+    position: relative;
     padding: 8px;
+}
+
+.links-text::before {
+    --size: 25px;
+    content: "";
+    position: absolute;
+    top: calc(8px + 50%);
+    left: 5px;
+    background-image: url(/static/assets/logo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: var(--size);
+    width: var(--size);
+    transform: translateY(calc(-50% - 8px)) translateX(-100%);
 }
 
 .link {
     text-decoration: underline;
     color: #fff;
     font-size: 1.2rem;
-    padding: 8px;
     border-radius: 12px;
+    padding: 8px;
 }
 
 .link:hover,
@@ -61,13 +76,14 @@ body {
     text-align: center;
     font-size: 1.25rem;
     color: #fff;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(3px);
     padding: 24px;
-    border-radius: 12px;
+    border-radius: 36px;
 }
 
 .search-button {
     background-color: rgb(206, 99, 117);
+    font-size: 1.2rem;
     color: #fff;
     border-radius: 12px;
     padding: 8px;
@@ -76,7 +92,29 @@ body {
 
 .footer {
     padding: 28px 40px;
+    background-color: var(--secondary);
+    border-radius: 24px 24px 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.h6 {
+    font-weight: bold;
+    text-align: center;
+}
+
+.autors-list {
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr;
+}
+
+.autors-list>li:nth-child(2n+1) {
     text-align: right;
-    background-color: rgb(205, 205, 205);
-    border-radius: 10px 10px 0 0;
+}
+
+.autors-list>li:nth-child(2n+1)::after {
+    content: '|';
 }
