переделал валидацию возраста

--- a/templates/register.html
+++ b/templates/register.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="important">
                         <input type="text" name="age" value="{{ age }}" class="text-input" placeholder="Возраст">
-                        <span class="error opacity-0">Только числа, не превышающие 100</span>
+                        <span class="error opacity-0">Только числа от 4 до 25</span>
                     </div>
                     <div class="important">
                         <input type="text" name="sciences" value="{{ sciences }}" class="text-input" placeholder="Области успеха" readonly>
