--- a/templates/child.html
+++ b/templates/child.html
@@ -64,7 +64,7 @@
                     </select>
                 </div>
                 <div class="buttons">
-                    <button class="button" id="close-dialog-button">Отмена</button>
+                    <button type="button" class="button" id="close-dialog-button">Отмена</button>
                     <button type="submit" id="add-button" disabled class="button">Добавить</button>
                 </div>
             </form>
