--- a/templates/child.html
+++ b/templates/child.html
@@ -17,16 +17,16 @@
     <header>
         <div class="container">
             <div class="information">
-                <h1 class="fullname">{{ secondName }} {{ firstName }} {{ surname }}</h1>
+                <h1 class="fullname">{{ child.secondName }} {{ child.firstName }} {{ child.surname }}</h1>
                 <div class="full-information">
                     <button class="full-information-button">i</button>
                     <div class="full-information-window display-none">
                         <h6 class="h6">Обо мне</h6>
                         <p class="text">
-                            <span>Возраст: {{ age }}</span>
-                            <span>Области успеха: <span id="sciences">{{ sciences }}</span></span>
-                            <span>Почта: {% if main %}{{ email }}{% else %}Скрыто{% endif %}</span>
-                            <span>Номер телефона: {% if phoneNumber %}{% if main %}{{ phoneNumber }}{% else %}Скрыто{% endif %}{% else %}-{% endif %}</span>
+                            <span>Возраст: {{ child.age }}</span>
+                            <span>Области успеха: <span id="sciences">{{ child.sciences }}</span></span>
+                            <span>Почта: {% if main %}{{ child.email }}{% else %}Скрыто{% endif %}</span>
+                            <span>Номер телефона: {% if child.phoneNumber %}{% if main %}{{ child.phoneNumber }}{% else %}Скрыто{% endif %}{% else %}-{% endif %}</span>
                         </p>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
     <main class="main">
         <dialog class="dialog" id="form-window">
             <h2 class="h2">Опишите ваше достижение</h2>
-            <form action="/achievement?id={{ id }}" method="POST" class="form">
+            <form action="/achievement?id={{ child.id }}" method="POST" class="form">
                 <div>
                     <input type="text" name="title" class="text-input" id="title" placeholder="Название работы">
                 </div>
