--- a/templates/search.html
+++ b/templates/search.html
@@ -42,7 +42,7 @@
                             <input type="range" name="minAge" id="min-age-input" class="range-input" value="{{ minAge }}" min="4" max="{{ maxAge }}" step="1">
                         </div>
                         <div>
-                            <p class="loger">До <span id="max-age-log">25</span></p>
+                            <p class="loger">До <span id="max-age-log">{{ maxAge }}</span></p>
                             <input type="range" name="maxAge" id="max-age-input" class="range-input" value="{{ maxAge }}" min="{{ minAge }}" max="25" step="1">
                         </div>
                     </fieldset>
